Added logs sending feature by #1755

--- a/core/resources/src/main/res/xml/file_paths.xml
+++ b/core/resources/src/main/res/xml/file_paths.xml
@@ -4,5 +4,8 @@
         <cache-path
             name="shared_images"
             path="/" />
+        <files-path
+            name="files"
+            path="/" />
     </paths>
 </resources>
